--- a/index.html
+++ b/index.html
@@ -25,8 +25,31 @@
     // 🧠 The person also has an `ageGracefully` method, which increases `age` by 1 each time it's called.
     // 🧠 But there's a catch: once `age` reaches 12, the `ageGracefully` method will have no effect.
     class PeterPan {
+         constructor(name) {
+         this.name = name;
+         this.age = 0;
+      }
+
+      ageGracefully() {
+      if (this.age < 12) {
+      this.age += 1;
+       }
+      }
 
     }
+
+                let person = new PeterPan("Wulnan");
+                console.log(person.age); // Outputs: 0
+
+                person.ageGracefully();
+                console.log(person.age); // Outputs: 1
+
+                // ... call ageGracefully 11 more times ...
+
+                console.log(person.age); // Outputs: 12
+
+                person.ageGracefully();
+                console.log(person.age); // Still outputs: 12
 
     // 👉 CHALLENGE 2
     // 🧠 Build an AirPlane class. This class allows to instantiate airplanes.
@@ -38,8 +61,28 @@
     // 🧠 Calling `down` changes the `altitude` prop appropriately and returns the updated `altitude`.
     // 🧠 If calling `down` would cause the plane to go below altitude zero, `altitude` is set to 0 and the string "CRASH!" is returned.
     class AirPlane {
+      constructor(model){
+        this.model = model;
+        this.altitude = 0;
 
-    }
+      }
+
+       up(meters){
+        this.altitude += meters
+        return this.altitude;
+
+       }
+
+       down(meters){
+        if (this.altitude - meters < 0) {
+           this.altitude = 0;
+           return "CRASH!";
+         } else {
+         this.altitude -= meters;
+            return this.altitude;
+          }     
+       }
+}
 
     // 👉 CHALLENGE 3
     // 🧠 Build a Bulb class.
@@ -48,6 +91,24 @@
     // 🧠 The methods work as one might expect, changing the value of `isOn` to the appropriate Boolean.
     // 🧠 The methods also return one of these two strings: "You turned the bulb ON", or "You turned the bulb OFF".
     class Bulb {
+      constructor(){
+        this.isOn = false;
+
+      }
+        turnOn(){
+          this.isOn = true;
+          return "You turned the bulb ON";
+        }
+
+        turnOff(){
+          this.isOn = false;
+          return "You turned the bulb OFF";
+        }
+
+       toggle() {
+         this.isOn = !this.isOn;
+         return this.isOn ? "You turned the bulb ON" : "You turned the bulb OFF";
+  }
 
     }
 
@@ -66,8 +127,23 @@
     //   minusThree.count() // returns null
     //   minusThree.count() // returns null
     class CountDown {
+    
+      constructor(start) {
+      this.countDownFrom = start;
+     }
 
+     count() {
+     if (this.countDownFrom > 0) {
+        return this.countDownFrom-- + "!";
+      } else if (this.countDownFrom === 0) {
+      this.countDownFrom--;
+       return "Liftoff!";
+    } else {
+      return null;
     }
+  }
+}
+    
 
     // 🧪 TESTS, do not work below this line
     // 🧪 TESTS, do not work below this line
